--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -13,6 +13,8 @@ html {
   font-style: normal;
   font-weight: normal;
   max-width: 1920px;
+  min-width: 320px;
+  margin: auto;
 
   @media screen and (max-width: 1094px) {
     font-size: 14px;
