--- a/src/page/index.pug
+++ b/src/page/index.pug
@@ -6,6 +6,7 @@ html
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(name="description", content="Adaptive resume template")
+    meta(name="keywords", content="Resume, Template, Adaptive layout")
     link(rel="apple-touch-icon", sizes="144x144", href="assets/favicons/apple-touch-icon.png")
     link(rel="icon", type="image/png", sizes="32x32", href="assets/favicons/favicon-32x32.png")
     link(rel="icon", type="image/png", sizes="16x16", href="assets/favicons/favicon-16x16.png")
