--- a/src/components/contact/contact.pug
+++ b/src/components/contact/contact.pug
@@ -1,7 +1,10 @@
+include ../block-header/block-header
 include ../contact-item/contact-item
 
 mixin contact(items)
-  .contact
+  section.contact
+    +block-header("contact")
+
     .contact__table
       each item in items
         +contact-item(item)
