--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -1,4 +1,4 @@
-include ../common.blocks/page/page
+include ../../components/resume/resume
 
 doctype html
 html
@@ -7,6 +7,7 @@ html
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(name="description", content="Adaptive resume template")
     meta(name="keywords", content="Resume, Template, Adaptive layout")
+
     link(rel="apple-touch-icon", sizes="144x144", href="assets/favicons/apple-touch-icon.png")
     link(rel="icon", type="image/png", sizes="32x32", href="assets/favicons/favicon-32x32.png")
     link(rel="icon", type="image/png", sizes="16x16", href="assets/favicons/favicon-16x16.png")
@@ -16,6 +17,9 @@ html
     meta(name="msapplication-TileColor", content="#da532c")
     meta(name="msapplication-config", content="assets/favicons/browserconfig.xml")
     meta(name="theme-color", content="#ffffff")
+
     title Resume
   body
-    +page
+    - var content = require("../../assets/data/content.json");
+
+    +resume(content)
