--- a/src/components/profile/profile.pug
+++ b/src/components/profile/profile.pug
@@ -4,5 +4,4 @@ mixin profile({ main, conclusion })
   section.profile
     +block-header("profile")
 
-    .profile__content
-      span #{main} #[strong #{conclusion}] 
+    .profile__content #{main} #[strong #{conclusion}] 
