--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,4 +1,4 @@
-@import '../contact-item/contact-item';
+@import '../../styles/variables/colors';
 
 .contact {
   &__table {
@@ -10,6 +10,65 @@
       align-items: center;
       display: flex;
       flex-direction: column;
+    }
+  }
+
+  &__item {
+    display: table-row;
+  
+    @media screen and (max-width: 400px), screen and (max-width: 1094px) and (min-width: 727px) {
+      display: block;
+      padding: 0.714rem 0;
+      text-align: center;
+    }
+  }
+
+  &__item-data {
+    color: $black;
+    display: table-cell;
+    font-size: 1.34rem;
+    letter-spacing: -0.03rem;
+    padding-left: 0.75rem;
+    line-height: 1;
+
+    @media screen and (max-width: 400px), screen and (max-width: 1094px) and (min-width: 727px) {
+      display: block;
+      padding: 0;
+    }
+  }
+
+  &__item-type {
+    color: $blue;
+    display: table-cell;
+    font-size: 1.3rem;
+    font-weight: bold;
+    letter-spacing: -0.03rem;
+    padding: 1.55rem 1.7rem 0.9rem 0.1rem;
+    text-transform: uppercase;
+
+    @media screen and (max-width: 400px), screen and (max-width: 1094px) and (min-width: 727px) {
+      display: block;
+      margin-bottom: 0.714rem;
+      padding: 0;
+    }
+  }
+
+  &:nth-child(4) {
+    .contact-item__type {
+      padding-top: 1.4rem;
+
+      @media screen and (max-width: 400px), screen and (max-width: 1094px) and (min-width: 727px) {
+        padding-top: 0;
+      }
+    }
+  }
+
+  &__item-data-link {
+    color: inherit;
+    text-decoration: none;
+
+    &:hover {
+      color: $blue;
     }
   }
 }
