--- a/src/components/software/software.pug
+++ b/src/components/software/software.pug
@@ -1,9 +1,14 @@
-include ../software-item/software-item
+include ../block-header/block-header
 
 mixin software(items)
   .software
     +block-header("software")
   
-    .software__items
+    .software__list
       each item in items
-        +software-item(item)
+        - var { tool, possession } = item;
+
+        .software__item
+          .software__item-tool= tool
+          .software__item-scale
+            .software__item-level(style={width: `${possession}%`})
