overwrite browser margins #28

--- a/src/components/progress-list-item/progress-list-item.pug
+++ b/src/components/progress-list-item/progress-list-item.pug
@@ -1,5 +1,5 @@
 mixin progress-list-item({ name, periodFrom, periodTo, title, description, nameColor }, blockName)
-  li.progress-list-item
+  .progress-list-item
     .progress-list-item__header
       span.progress-list-item__name(class=[`progress-list-item__name_color_${nameColor}`])= name
       span.progress-list-item__period
