--- a/src/components/progress-list/progress-list.pug
+++ b/src/components/progress-list/progress-list.pug
@@ -3,5 +3,5 @@ include ../progress-list-item/progress-list-item
 mixin progress-list(items, blockName)
   ul.progress-list
     each item in items
-      div(class=`progress-list__item progress-list__item_type_for-${blockName}`)
+      li.progress-list__item(class=`progress-list__item_type_for-${blockName}`)
         +progress-list-item(item)
